# dot-matrix-calendar

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  boot.py  coverage.lcov  datetime_test.py  main.py  manifest.py  modulesfrozen_micro_web_srv_2.py  modulesfrozen_wifi_setup.py  pymakr.conf
.github/workflows/: make_esp32.yaml  makefile.yaml  release-please.yaml  release-please.yml  release.yml  test.yaml  upload-release.yaml
boards/CUSTOM_ESP32/: Makefile  manifest.py  mpconfigboard.cmake  mpconfigboard.h  partitions-4MiB.csv
boards/ESP32_GENERIC/: mpconfigboard.cmake
boards/ESP8266EX/: Makefile  build.sh  mpconfigboard.mk
boards/ESP8266_GENERIC/: Makefile  manifest.py  manifest.py.old  mpconfigboard.h  mpconfigboard.mk
boards/LOLIN_S2_MINI/: Makefile  manifest.py  mpconfigboard.cmake
boards/LOLIN_S3_MINI/: Makefile  mpconfigboard.cmake
boards/UNIX/: Makefile  manifest.py  mpconfigport.h
cmodules/: micropython.cmake
cmodules/DotMatrix/: micropython.cmake  micropython.mk  micropython.mk.removed  project.yml  pymakr.conf
cmodules/IcsParser/: micropython.cmake  micropython.mk  mp_ics.c  project.yml
cmodules/LEDMatrixDriver/: LEDMatrixDriver.cpp  LEDMatrixDriver.hpp  micropython.cmake  mp_LEDMatrixDriver.c  mp_LEDMatrixDriver.cpp  mp_LEDMatrixDriver.h
cmodules/ics/: ics_parser.c  meson.build  micropython.cmake  micropython.mk  mp_ics.c
cmodules/ics/test/: meson.build  test_event.ics  test_ics.c
cmodules/max7219/: cmock.yaml  matrix.c  matrix.cpp  matrix.h  max7219.c  max7219.h  meson.build  micropython.cmake  micropython.mk  mp_max7219.c
cmodules/max7219/mocks/: Mockesp_err.c  Mockesp_err.h  Mockesp_timer.c  Mockesp_timer.h  Mockmatrix.c  Mockmatrix.h  Mockmax7219.c  Mockmax7219.h  Mockspi_master.c  Mockspi_master.h
cmodules/max7219/src/: matrix.c  matrix.h  max7219.c  max7219.h  meson.build
cmodules/max7219/test/: TestMatrix.c  TestMax7219.c  meson.build  test_matrix.c
cmodules/uICAL/: base.cpp  byandcounter.cpp  bysetposcounter.cpp  byweekdaycounter.cpp  calendar.cpp  calendarentry.cpp  calendariter.cpp  cascade.cpp  counter.cpp  datecalc.cpp  dateperiod.cpp  datestamp.cpp  datetime.cpp  epochtime.cpp  logging.cpp  micropython.cmake  mp_rrule.cpp  mp_rrule.h  rrule.cpp  rruleiter.cpp  stream.cpp  string.cpp  tz.cpp  tzmap.cpp  uICAL.c  uICAL.h  util.cpp  vevent.cpp  veventiter.cpp  vline.cpp  vlinestream.cpp  (+2 more)
modules/: Calendar.py  Clock.py  DateTimeExt.py  dateHandling.py  datetime.py  max7219.py  scroller.py  time.py
src/: Calendar.py  auth_tool.py  boot.py  credentials  main.py  scroller2.py  src.code-workspace  utils.py
stand/: Open-marquee-full.3mf  Open-marquee-full.stl  README.md
tests/: repeating.ics  test_DateTimeExt.py  test_dateHandling.py  test_datetime.py  test_getOpt.py  test_ics.py
(+92 files in other folders)
